# MrsWatson

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.txt  Dockerfile  INSTALL  LICENSE.txt  Makefile.am  MrsWatson.sln  MrsWatson.vcxproj  MrsWatson.vcxproj.filters  MrsWatsonTest.vcxproj  MrsWatsonTest.vcxproj.filters  NEWS  README  README.md  TESTING.md  THANKS  TODO.md  autogen.sh  configure.ac  groups  pre-configure.sh  project.config  setup-build.sh
MrsWatson.xcodeproj/: project.pbxproj
cmake/: BuildPackage.cmake  ConfigureTarget.cmake
doc/: Building.md  ChangeLog.md  ChangeLog.txt
main/: CMakeLists.txt  Makefile.am  MrsWatsonMain.c  main.c
projects/MrsWatson.xcodeproj/: project.pbxproj
projects/MrsWatson.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/NetBeans/MrsWatson/nbproject/: Package-Default.bash  configurations.xml  project.xml
projects/VisualStudio/: MrsWatson.sln  MrsWatson.vcxproj  MrsWatson.vcxproj.filters  MrsWatsonTest.vcxproj  MrsWatsonTest.vcxproj.filters  libMrsWatson.vcxproj  libMrsWatson.vcxproj.filters
projects/Xcode/MrsWatson.xcodeproj/: project.pbxproj
projects/Xcode/MrsWatson/MrsWatson.xcodeproj/: project.pbxproj
resources/: again-test.fxp  c-scale.mid
scripts/: format-code.sh  make-release.sh  mrswatson.astyle  new-file.sh  travis-before-install.sh  travis-build.sh
source/: AudioClock.c  AudioClock.h  AudioSettings.c  AudioSettings.h  BuildInfo.c  BuildInfo.h  CMakeLists.txt  CharString.c  CharString.h  CharStringList.c  CharStringList.h  ErrorReporter.c  ErrorReporter.h  EventLogger.c  EventLogger.h  FileUtilities.c  FileUtilities.h  InputFile.c  InputFile.h  InputFilePcm.c  InputFilePcm.h  InputFilePcmFile.c  InputFilePcmFile.h  InputSource.c  InputSource.h  InputSourcePcmFile.c  InputSourcePcmFile.h  InputSourcePcmStream.c  InputSourcePcmStream.h  LinkedList.c  LinkedList.h  LogPrinter.c  LogPrinter.h  Makefile.am  MidiEvent.c  MidiEvent.h  MidiFile.c  MidiFile.h  MidiSequence.c  MidiSequence.h  (+68 more)
source/app/: BuildInfo.c  BuildInfo.h  ProgramOption.c  ProgramOption.h  ReturnCodes.h
source/audio/: AudioSettings.c  AudioSettings.h  PcmSampleBuffer.c  PcmSampleBuffer.h  SampleBuffer.c  SampleBuffer.h
source/base/: Base64.c  Base64.h  CharString.c  CharString.h  Endian.c  Endian.h  File.c  File.h  FileUtilities.c  FileUtilities.h  LinkedList.c  LinkedList.h  PlatformInfo.c  PlatformInfo.h  PlatformInfoMac.m  PlatformUtilities.c  PlatformUtilities.h  StringUtilities.c  StringUtilities.h  Types.h
source/io/: RiffFile.c  RiffFile.h  SampleSource.c  SampleSource.h  SampleSourceAiff.c  SampleSourceAiff.h  SampleSourceAudiofile.c  SampleSourceAudiofile.h  SampleSourceFlac.c  SampleSourceFlac.h  SampleSourceMp3.c  SampleSourceOgg.c  SampleSourcePcm.c  SampleSourcePcm.h  SampleSourceSilence.c  SampleSourceSilence.h  SampleSourceWave.c  SampleSourceWave.h
source/logging/: ErrorReporter.c  ErrorReporter.h  EventLogger.c  EventLogger.h  LogPrinter.c  LogPrinter.h
source/midi/: MidiEvent.c  MidiEvent.h  MidiSequence.c  MidiSequence.h  MidiSource.c  MidiSource.h  MidiSourceFile.c  MidiSourceFile.h
source/plugin/: Plugin.c  Plugin.h  PluginChain.c  PluginChain.h  PluginGain.c  PluginGain.h  PluginLimiter.c  PluginLimiter.h  PluginPassthru.c  PluginPassthru.h  PluginPreset.c  PluginPreset.h  PluginPresetFxp.c  PluginPresetFxp.h  PluginPresetInternalProgram.c  PluginPresetInternalProgram.h  PluginPresetOzone.c  PluginPresetOzone.h  PluginSilence.c  PluginSilence.h  PluginVst2x.cpp  PluginVst2x.h  PluginVst2xCallbacks.h  PluginVst2xHostCallback.cpp  PluginVst2xHostCallback.h  PluginVst2xId.c  PluginVst2xId.h  PluginVst2xLinux.cpp  PluginVst2xMac.cpp  PluginVst2xMac.mm  PluginVst2xMacWindow.h  PluginVst2xMacWindow.m  PluginVst2xWindows.cpp  Vst2xHostCallback.cpp
source/sequencer/: AudioClock.c  AudioClock.h  AudioSettings.c  MidiSequence.c  MidiSequence.h
source/time/: AudioClock.c  AudioClock.h  TaskTimer.c  TaskTimer.h
test/: AnalysisClipping.c  AnalysisClipping.h  AnalysisDistortion.c  AnalysisDistortionTest.c  AnalysisSilence.c  AnalysisSilence.h  AnalysisSilenceTest.c  AnalyzeFile.c  AnalyzeFile.h  ApplicationRunner.c  ApplicationRunner.h  ApplicationTestSuite.c  AudioClockTest.c  AudioClockTest.h  AudioSettingsTest.c  CMakeLists.txt  CharStringTest.c  FileUtilitiesTest.c  IntegrationTests.c  InternalTestSuite.c  LinkedListTest.c  Makefile.am  MidiSequenceTest.c  MidiSourceTest.c  MrsWatsonTest.c  MrsWatsonTestMain.c  MrsWatsonTestMain.h  PlatformUtilitiesTest.c  PluginChainTest.c  PluginPresetTest.c  PluginTest.c  SampleBufferTest.c  SampleSourceTest.c  SampleSourceWaveTest.c  StringUtilitiesTest.c  TaskTimerTest.c  TestRunner.c  TestRunner.h  TestSuite.c  TestSuite.h  (+2 more)
test/analysis/: AnalysisClipping.c  AnalysisClipping.h  AnalysisClippingTest.c  AnalysisDistortion.c  AnalysisDistortion.h  AnalysisDistortionTest.c  AnalysisSilence.c  AnalysisSilence.h  AnalysisSilenceTest.c  AnalyzeFile.c  AnalyzeFile.h
test/app/: ProgramOptionTest.c
test/audio/: AudioSettingsTest.c  PcmSampleBufferTest.c  SampleBufferTest.c
test/base/: Base64Test.c  CharStringTest.c  EndianTest.c  FileTest.c  FileUtilitiesTest.c  LinkedListTest.c  PlatformInfoTest.c  PlatformUtilitiesTest.c  StringUtilitiesTest.c
test/io/: SampleSourceTest.c
test/midi/: MidiSequenceTest.c  MidiSourceTest.c
test/plugin/: PluginChainTest.c  PluginMock.c  PluginMock.h  PluginPresetMock.c  PluginPresetMock.h  PluginPresetOzoneTest.c  PluginPresetTest.c  PluginTest.c  PluginVst2xIdTest.c
test/resources/: a440-stereo.pcm
test/resources/plugins/mac/again.vst/Contents/: Info.plist
test/resources/plugins/mac/again.vst/Contents/MacOS/: again
test/sequencer/: AudioClockTest.c  AudioSettingsTest.c  MidiSequenceTest.c
test/time/: AudioClockTest.c  TaskTimerTest.c
test/unit/: ApplicationRunner.c  ApplicationRunner.h  ApplicationTestSuite.c  IntegrationTests.c  InternalTestSuite.c  TestRunner.c  TestRunner.h  UnitTests.c
testfiles/: a440-stereo.aif
