AUTOMAKE_OPTIONS = foreign
CFLAGS = -Wall -I./vendor/vstsdk2.4/pluginterfaces/vst2.x

bin_PROGRAMS = mrswatson
mrswatson_SOURCES = source/AudioClock.c source/AudioSettings.c source/BuildInfo.c source/CharString.c source/EventLogger.c source/LinkedList.c source/MidiEvent.c source/MidiSequence.c source/MidiSource.c source/MidiSourceFile.c source/MrsWatson.c source/PlatformInfo.c source/Plugin.c source/PluginChain.c source/ProgramOption.c source/SampleBuffer.c source/SampleSource.c source/SampleSourcePcmFile.c source/SampleSourceSilence.c source/StringUtilities.c source/TaskTimer.c source/PluginVst2x.cpp source/Vst2xHostCallback.cpp
