cmake_minimum_required(VERSION 3.0)
project(MrsWatsonMain)

include(${cmake_SCRIPTS_DIR}/ConfigureTarget.cmake)
set(main_SOURCES MrsWatsonMain.c)

if(mw_BUILD_32)
  add_executable(mrswatson ${main_SOURCES})
  target_link_libraries(mrswatson mrswatsoncore)
  if(WITH_AUDIOFILE)
    target_link_libraries(mrswatson audiofile)
  endif()
  configure_target(mrswatson 32)
endif()

if(mw_BUILD_64)
  add_executable(mrswatson64 ${main_SOURCES})
  target_link_libraries(mrswatson64 mrswatsoncore64)
  if(WITH_AUDIOFILE)
    target_link_libraries(mrswatson64 audiofile64)
  endif()
  configure_target(mrswatson64 64)
endif()
